Connected css and script pages to html

--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<!DOCTYPE html>
+<head>
+    <link rel="stylesheet" href="design.css">
+</head>
 <div class="calculator">
 
     <input type="text" class="calculator-screen" value="0" disabled />
@@ -31,4 +35,6 @@
       <button type="button" class="equal-sign operator" value="=">=</button>
   
     </div>
+
+    <script src="activeCalc.js"></script>
   </div>
